--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,19 @@
   </dependencies>
   
   <build>
+  <plugins>
+  <plugin>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>2.4</version>
+  <configuration>
+  <warSourceDirectory>webapp</warSourceDirectory>
+  <failOnMissingWebXml>false</failOnMissingWebXml>
+   <includes>
+   <include>**/*.*</include>
+   </includes>
+  </configuration>
+  </plugin>
+  </plugins>
     <finalName>TEST</finalName>
   </build>
 </project>
